--- a/Changes
+++ b/Changes
@@ -1,28 +1,28 @@
 Revision history for beacon2-ri-tools
 
 2.0.5  2024-XX-XX
-    - Foo
+    - The 'config.yaml' for the 'beacon' script is pre-formatted for the Dockerized version.
 
 2.0.4  2024-12-03
-    - Moved `beacon` script to `bin/beacon` and updated paths.
+    - Moved 'beacon' script to 'bin/beacon' and updated paths.
     - Reorganized repo in folders
 
 2.0.3  2024-05-24
-    - Added Unicode support to `utils/bff-validator`
+    - Added Unicode support to 'utils/bff-validator'
 
 2.0.2  2024-02-07
-    - Updated `docker-compose.yml`.
-    - Changed `config.yml` to enable connecting to @mongo from within `beacon2-ri-tools` container
+    - Updated 'docker-compose.yml'.
+    - Changed 'config.yml' to enable connecting to @mongo from within 'beacon2-ri-tools' container
 
 2.0.1  2024-01-22
     - Updated contact email to @cnag.eu.
-    - `utils/bff-validator`: Adjusted STDOUT printout details
-    - `test`: Sorted `frequencyInPopulations` by key in `genomicVariationsVcf.json.gz`
-    - Docker Hub location updated to `manuelrueda/beacon2-ri-tools`
-    - Moved `BEACON` to `lib/BEACON`
+    - 'utils/bff-validator': Adjusted STDOUT printout details
+    - 'test': Sorted 'frequencyInPopulations' by key in 'genomicVariationsVcf.json.gz'
+    - Docker Hub location updated to 'manuelrueda/beacon2-ri-tools'
+    - Moved 'BEACON' to 'lib/BEACON'
     - Updated READMEs
-    - Fixed `Dockerfile`:
-        - Changed base image from `ubuntu` to `ubuntu:20.04` (thanks to SJD folks)
+    - Fixed 'Dockerfile':
+        - Changed base image from 'ubuntu' to 'ubuntu:20.04' (thanks to SJD folks)
 
 2.0.0  2022-08-18
     - Stable version released along with the accompanying paper:
