--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 Revision history for beacon2-ri-tools
 
 2.0.5  2024-XX-XX
-    - The 'config.yaml' for the 'beacon' script is pre-formatted for the Dockerized version.
-    - Renamed 'test/param.in' to test/param.in'
+    - The 'config.yaml' for the 'beacon' script is now pre-formatted for the Dockerized version
+    - Renamed 'test/param.in' to 'test/param.in'
+    - Enforced Browser HTML display using Python3's default HTTP server
 
 2.0.4  2024-12-03
     - Moved 'beacon' script to 'bin/beacon' and updated paths.
