--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for beacon2-ri-tools
 
 2.0.6  2025-0X-XX
-    - Foo
+    - Created Flask app (in development) for BFF Browser
 
 2.0.5  2025-01-07
     - The 'config.yaml' for the 'beacon' script is now pre-formatted for the Dockerized version
