--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for beacon2-ri-tools
 
 2.0.6  2025-0X-XX
     - Created Flask app (in development) for BFF Browser
+    - In bff2html, foo.json (ee.g., exome.json) is no longer NDJSON but JSON array
 
 2.0.5  2025-01-07
     - The 'config.yaml' for the 'beacon' script is now pre-formatted for the Dockerized version
