--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Revision history for beacon2-ri-tools
 2.0.7  2025-02-18
     - Moved 'browser/web' to 'utils/bff_browser/static/assets'
     - Added argument '-projectdir-override' to enable external assignment of id (e.g., Celery)
-    - Renamed internal parameter from 'ncpu' to 'nthread' and option '-n' to '-t'
+    - Renamed internal parameter from 'ncpu' to 'nthreads' and option '-n' to '-t'
 
 2.0.6  2025-01-15
     - Created a Flask app for 'utils/bff_browser' (currently in development)
