--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for beacon2-ri-tools
 
+2.0.8  2025-0X-XX
+
+    - Addex 'examples' dir with hg38 (GRCh38)
+
 2.0.7  2025-02-22
     - Moved 'browser/web' to 'utils/bff_browser/static/assets'
     - Added argument '-projectdir-override' to enable external assignment of id (e.g., Celery)
