--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for beacon2-ri-tools
 	- Added spinner for interactive execution of 'bin/beacon'
 	- Added basic tests in t/
     - Updated 'config.yaml' with placeholder {base}
+    - Added $version to 'log.json'
 
 2.0.7  2025-02-22
     - Moved 'browser/web' to 'utils/bff_browser/static/assets'
