--- a/Changes
+++ b/Changes
@@ -26,10 +26,11 @@ Revision history for beacon2-cbi-tools
         - 'mongo-database-tools': ubuntu2004-100.5.1 -> ubuntu2204-100.9.4
         - 'ClinVar' from clinvar_20211218* to clinvar_20250312*
       - VCF2BFF:
-        - Reads 'annotatedWith' from external 'config.yaml' (fixed typo: toolreferences.dbSNSFP -> dbNSFP)
+        - Renamed lib/*/.pm
+        - Added t/ and debugging mode 'bff-pretty'
+        - Now reads 'annotatedWith' from external 'config.yaml' (fixed typo: toolreferences.dbSNSFP -> dbNSFP)
         - Added Sequence Ontology (SO) terms for calculated variant consequences:
             https://www.ensembl.org/info/genome/variation/prediction/predicted_data.html
-        - Added t/ and debugging mode 'bff-pretty'
 
 2.0.7  2025-02-22
     - Moved 'browser/web' to 'utils/bff_browser/static/assets'
