--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for beacon2-cbi-tools
 
+2.0.9  2025-XX-XX
+
+    - Added docs
+
 2.0.8  2025-03-22
 
     - The CRG FTP site has reached end-of-life after three years of availability
