--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for beacon2-cbi-tools
 2.0.9  2025-XX-XX
 
     - Added docs
+    - Added utf-8 emojis to STDOUT
 
 2.0.8  2025-03-22
 
