--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Revision history for beacon2-cbi-tools
 2.0.9  2025-XX-XX
 
     - Added docs
-    - Added utf-8 emojis to STDOUT
+    - Made STDOUT friendlier with UTF-8 emoji
 
 2.0.8  2025-03-22
 
